--- a/database-service/Masterarbeit.DatabaseService.App/Masterarbeit.DatabaseService.App.csproj
+++ b/database-service/Masterarbeit.DatabaseService.App/Masterarbeit.DatabaseService.App.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Masterarbeit.DatabaseService.Contracts\Masterarbeit.DatabaseService.Contracts.csproj" />
+    <ProjectReference Include="..\Masterarbeit.DatabaseService.DatabaseAccess\Masterarbeit.DatabaseService.DatabaseAccess.csproj" />
+  </ItemGroup>
 
 </Project>
