--- a/database-service/Masterarbeit.DatabaseService.DatabaseAccess/Masterarbeit.DatabaseService.DatabaseAccess.csproj
+++ b/database-service/Masterarbeit.DatabaseService.DatabaseAccess/Masterarbeit.DatabaseService.DatabaseAccess.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Masterarbeit.DatabaseService.Contracts\Masterarbeit.DatabaseService.Contracts.csproj" />
+    <ProjectReference Include="..\..\shared\Masterarbeit.Shared.Contracts\Masterarbeit.Shared.Contracts.csproj" />
     <ProjectReference Include="..\Masterarbeit.DatabaseService.Database\Masterarbeit.DatabaseService.Database.csproj" />
   </ItemGroup>
 
