--- a/database-service/Masterarbeit.DatabaseService/Properties/launchSettings.json
+++ b/database-service/Masterarbeit.DatabaseService/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:35977/",
+      "applicationUrl": "http://localhost:35977/api/fixedword",
       "sslPort": 0
     }
   },
