FixedWords können über UI hinzugefügt und verändert werden

--- a/client/Masterarbeit.Frontend.App/Masterarbeit.Frontend.App.csproj
+++ b/client/Masterarbeit.Frontend.App/Masterarbeit.Frontend.App.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\shared\Masterarbeit.Shared.Contracts\Masterarbeit.Shared.Contracts.csproj" />
+    <ProjectReference Include="..\Masterarbeit.Frontend.AzureAccess\Masterarbeit.Frontend.AzureAccess.csproj" />
+    <ProjectReference Include="..\Masterarbeit.Frontend.DatabaseAccess\Masterarbeit.Frontend.DatabaseAccess.csproj" />
+  </ItemGroup>
+
 </Project>
