Database Service für MAML, OCR-Erkennung, BildUpload

--- a/client/Masterarbeit.Frontend.App/Masterarbeit.Frontend.App.csproj
+++ b/client/Masterarbeit.Frontend.App/Masterarbeit.Frontend.App.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\shared\Masterarbeit.Shared.Contracts\Masterarbeit.Shared.Contracts.csproj" />
+    <ProjectReference Include="..\..\shared\Masterarbeit.Shared.Helper\Masterarbeit.Shared.Helper.csproj" />
     <ProjectReference Include="..\Masterarbeit.Frontend.AzureAccess\Masterarbeit.Frontend.AzureAccess.csproj" />
     <ProjectReference Include="..\Masterarbeit.Frontend.DatabaseAccess\Masterarbeit.Frontend.DatabaseAccess.csproj" />
+    <ProjectReference Include="..\Masterarbeit.Frontend.MAML.DatabaseAccess\Masterarbeit.Frontend.MAML.DatabaseAccess.csproj" />
   </ItemGroup>
 
 </Project>
