--- a/client/Masterarbeit.Frontend/appsettings.json
+++ b/client/Masterarbeit.Frontend/appsettings.json
@@ -1,6 +1,12 @@
 ﻿{
+  //API-Dokumentation ist dem entsprechenden Dokument zu entnehmen.
   "Database": {
     "Url": "http://localhost:35977/api/"
+  },
+
+  //API-Dokumentation ist dem entsprechenden Dokument zu entnehmen
+  "MAML": {
+    "DatabaseService": "http://localhost:2484/api/"
   },
 
   "Logging": {
