--- a/maml-service/Masterarbeit.MAML.DatabaseService/appsettings.json
+++ b/maml-service/Masterarbeit.MAML.DatabaseService/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:sqlserver-masterarbeit3700195.database.windows.net,1433;Initial Catalog=DB_Masterarbeit3700195;Persist Security Info=False;User ID=serveradmin;Password=eVlfNgDQ2VztBjSZNiDB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:sqlserver-masterarbeit3700195.database.windows.net,1433;Initial Catalog=DB_MAML_Masterarbeit3700195;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
