--- a/client/Masterarbeit.Frontend.AzureAccess/Masterarbeit.Frontend.AzureAccess.csproj
+++ b/client/Masterarbeit.Frontend.AzureAccess/Masterarbeit.Frontend.AzureAccess.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Masterarbeit.Frontend.Contracts\Masterarbeit.Frontend.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
