--- a/client/Masterarbeit.Frontend/Masterarbeit.Frontend.csproj
+++ b/client/Masterarbeit.Frontend/Masterarbeit.Frontend.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Holder.js" Version="2.9.4" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
@@ -26,6 +27,7 @@
     <ProjectReference Include="..\..\shared\Masterarbeit.Shared.Contracts\Masterarbeit.Shared.Contracts.csproj" />
     <ProjectReference Include="..\Masterarbeit.Frontend.App\Masterarbeit.Frontend.App.csproj" />
     <ProjectReference Include="..\Masterarbeit.Frontend.Contracts\Masterarbeit.Frontend.Contracts.csproj" />
+    <ProjectReference Include="..\Masterarbeit.Frontend.DatabaseAccess\Masterarbeit.Frontend.DatabaseAccess.csproj" />
   </ItemGroup>
 
 </Project>
