--- a/database-service/Masterarbeit.DatabaseService/appsettings.json
+++ b/database-service/Masterarbeit.DatabaseService/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:sqlserver-masterarbeit3700195.database.windows.net,1433;Initial Catalog=DB_Masterarbeit3700195;Persist Security Info=False;User ID=serveradmin;Password=eVlfNgDQ2VztBjSZNiDB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=.;Database=Masterarbeit;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
